<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_peliculas">

    <fragment
        android:id="@+id/navigation_peliculas"
        android:name="com.cescristorey.appmovie.ui.peliculas.PeliculasFragment"
        android:label="@string/title_peliculas"
        tools:layout="@layout/fragment_peliculas" />

    <fragment
        android:id="@+id/navigation_series"
        android:name="com.cescristorey.appmovie.ui.series.SeriesFragment"
        android:label="@string/title_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.cescristorey.appmovie.ui.favoritos.FavoritosFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" />


</navigation>